--- a/index.html
+++ b/index.html
@@ -1,12 +1,281 @@
 {% extends "templates/_base.html" %}
 
+{% block bodyattrs %}id="home"{% endblock bodyattrs %}
+
+{% block library_css %}
+{{ super() }}
+
+{{ CSS.push('vendor/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css') }}
+{{ CSS.push('vendor/chosen/chosen.css') }}
+{{ CSS.push('css/style.css') }}
+{{ CSS.render('css/style.min.css') }}
+
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
+{% endblock library_css %}
+
 {% block content %}
-<div class="container">
-  <div class="jumbotron">
-    <h1>Welcome to your new project!</h1>
-    <p>Replace this message with your own content in <code>{{ PROJECT_PATH }}/index.html</code>.</p>
-    <p>Learn more on the <a href="_example.html">example page</a>.</p>
-  </div>
+
+<div id="cpd-scrolling" style="position: relative;">
+
+	<div id="cpd-header">
+		<div id="cpd-headwrap">
+			<div id="cpd-logo">
+				<a href="http://chicagoreporter.com/"><img src="assets/images/cr-icon.jpg" width="60px" alt="Chicago Reporter"/></a>
+			</div>
+			<div id="cpd-title">Settling for too much</div>
+		</div>
+	</div>
+	<div id="cpd-progress"><svg height="16px"><rect></rect></svg></div>
+
+
+	<section id="slide-intro" class="slide">
+		<div class="img fixed">
+			<div class="overlay"></div>
+		</div>
+		
+		<div id="trigger-top"></div><div id="trigger-intro"></div>
+		<div id="desc">
+			<h1>
+				<span class="settling">Settling </span>
+				<span class="for">for </span>
+				<span class="too redtext">too </span>
+				<span class="much redtext">much</span>
+			</h1>
+			<h2>Police misconduct lawsuits in Chicago</h2>
+		</div>
+	</section>
+	<div class="spacer s7"></div>
+
+
+	
 </div>
+
+
 {% endblock content %}
+
+
+
+{% block library_scripts %}
+
+{{ super() }}
+
+<script src="assets/vendor/greensock/TweenMax.min.js"></script>
+<script src="assets/vendor/scrollmagic/minified/ScrollMagic.min.js"></script>
+<script src="assets/vendor/scrollmagic/minified/plugins/debug.addIndicators.min.js"></script>
+<script src="assets/vendor/scrollmagic/minified/plugins/animation.gsap.min.js"></script>
+
+
+
+
+ 
+<script>
+
+	function loadText(){
+		// ID of the Google Spreadsheet
+		var spreadsheetID = "1z59WxmAKbePMXrAOQ3-bbcYlJfQUC95V1sRKM_m1WT0";
+		
+		// Make sure it is public or set to Anyone with link can view 
+		var url = "https://spreadsheets.google.com/feeds/list/" + spreadsheetID + "/od6/public/values?alt=json";
+
+		$.getJSON(url, function(data) {
+
+			var entry = data.feed.entry;
+
+			$(entry).each(function(index){
+				// Column names
+				var col1 = this.gsx$slidetext.$t;
+				var col2 = encodeURIComponent(this.gsx$twittertext.$t);
+				var slide_num = index+1;
+				var html = '<div class="spacer s7"></div><section id="slide-' + slide_num + '" class="slide"><div class="img fixed"></div><div id="trigger-' + slide_num + '" ></div><div class="block"><h3>';
+				html += col1;
+				html += '</h3></div><div class="twitter-icon"></div><div class="spacer s7"></div></section>';
+				$('#cpd-scrolling').append(html);
+
+				if (entry.length == slide_num){
+					initScroll();
+				}
+			});
+
+		});	
+	}
+
+	function initScroll(){
+		// detect if mobile browser. regex -> http://detectmobilebrowsers.com
+		var isMobile = (function(a){return /(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4))})(navigator.userAgent||navigator.vendor||window.opera);
+
+		// init controller
+		var controller = new ScrollMagic.Controller();
+		var main_offset = $(window).height()/2;
+
+
+		// introtext
+		var tween_introtext = TweenMax.to("#desc", 1, {opacity: 0});
+		var scene_introtext = new ScrollMagic.Scene({triggerElement: "#trigger-intro", duration: '40%', offset: main_offset})
+						.setTween(tween_introtext)
+						.setPin("#desc")
+						.addTo(controller);
+
+		// introtext
+		var tween_toomuch = TweenMax.to("#desc h1", 1, {color: '#bd261d'});
+		var scene_toomuch = new ScrollMagic.Scene({triggerElement: "#trigger-intro", duration: '40%', offset: main_offset})
+						.setTween(tween_toomuch)
+						.addTo(controller);
+
+		// introimg
+		var scene_introimg = new ScrollMagic.Scene({triggerElement: "#trigger-intro", duration: '160%', offset: main_offset})
+						.setPin("#slide-intro .img.fixed")
+						.addTo(controller);
+
+		// slide 1
+		var tween_slide1 = TweenMax.to("#slide-1", 0, {opacity: 1});
+		var scene_slide1 = new ScrollMagic.Scene({triggerElement: "#trigger-1", duration: '60%', offset: 200})
+						.setTween(tween_slide1)
+						.setPin("#slide-1 .block h3")
+						.addTo(controller);
+
+		// slide 2
+		var tween_slide2 = TweenMax.to("#slide-2", 0, {opacity: 1});
+		var scene_slide2 = new ScrollMagic.Scene({triggerElement: "#trigger-2", duration: '100%', offset: 200})
+						.setTween(tween_slide2)
+						.setPin("#slide-2 .block h3")
+						.addTo(controller);
+
+
+		// slide 2 image fade in
+		var tween_slide2img = TweenMax.fromTo("#slide-2 .img", 3, {opacity: 0}, {opacity: 1});
+		var scene_slide2img = new ScrollMagic.Scene({triggerElement: "#trigger-2", duration: '120%', offset: main_offset})
+						.setTween(tween_slide2img)
+						.setPin("#slide-2 .img")
+						.addTo(controller);
+
+		// slide 3
+		var tween_slide3 = TweenMax.to("#slide-3 .block", 0, {opacity: 1});
+		var scene_slide3 = new ScrollMagic.Scene({triggerElement: "#trigger-3", duration: '100%', offset: 200})
+						.setTween(tween_slide3)
+						.setPin("#slide-3 .block h3")
+						.addTo(controller);
+
+		// slide 3 image fade in
+		var tween_slide3img = TweenMax.fromTo("#slide-3 .img", 3, {opacity: 0}, {opacity: 1});
+		var scene_slide3img = new ScrollMagic.Scene({triggerElement: "#trigger-3", duration: '120%', offset: main_offset})
+						.setTween(tween_slide3img)
+						.setPin("#slide-3 .img")
+						.addTo(controller);
+
+		//slide 4
+		var tween_slide4 = TweenMax.to("#slide-4 .block", 0, {opacity: 1});
+		var scene_slide4 = new ScrollMagic.Scene({triggerElement: "#trigger-4", duration: '100%', offset: 200})
+						.setTween(tween_slide4)
+						.setPin("#slide-4 .block h3")
+						.addTo(controller);
+
+		// slide 4 image fade in
+		var tween_slide4img = TweenMax.fromTo("#slide-4 .img", 3, {opacity: 0}, {opacity: 1});
+		var scene_slide4img = new ScrollMagic.Scene({triggerElement: "#trigger-4", duration: '120%', offset: main_offset})
+						.setTween(tween_slide4img)
+						.setPin("#slide-4 .img")
+						.addTo(controller);
+
+		// slide 5
+		var tween_slide5 = TweenMax.to("#slide-5 .block", 0, {opacity: 1});
+		var scene_slide5 = new ScrollMagic.Scene({triggerElement: "#trigger-5", duration: '100%', offset: 200})
+						.setTween(tween_slide5)
+						.setPin("#slide-5 .block h3")
+						.addTo(controller);
+
+		// slide 6
+		var tween_slide6 = TweenMax.to("#slide-6 .block", 0, {opacity: 1});
+		var scene_slide6 = new ScrollMagic.Scene({triggerElement: "#trigger-6", duration: '100%', offset: 200})
+						.setTween(tween_slide6)
+						.setPin("#slide-6 .block h3")
+						.addTo(controller);
+
+		// slide 7
+		var tween_slide7 = TweenMax.to("#slide-7 .block", 0, {opacity: 1});
+		var scene_slide7 = new ScrollMagic.Scene({triggerElement: "#trigger-7", duration: '100%', offset: 200})
+						.setTween(tween_slide7)
+						.setPin("#slide-7 .block h3")
+						.addTo(controller);
+
+		// slide 8
+		var tween_slide8 = TweenMax.to("#slide-8 .block", 0, {opacity: 1});
+		var scene_slide8 = new ScrollMagic.Scene({triggerElement: "#trigger-8", duration: '100%', offset: 200})
+						.setTween(tween_slide8)
+						.setPin("#slide-8 .block h3")
+						.addTo(controller);
+
+		// slide 3
+		var tween_slide9 = TweenMax.to("#slide-9 .block", 0, {opacity: 1});
+		var scene_slide9 = new ScrollMagic.Scene({triggerElement: "#trigger-9", duration: '100%', offset: 200})
+						.setTween(tween_slide9)
+						.setPin("#slide-9 .block h3")
+						.addTo(controller);
+
+		// slide 3
+		var tween_slide10 = TweenMax.to("#slide-10 .block", 0, {opacity: 1});
+		var scene_slide10 = new ScrollMagic.Scene({triggerElement: "#trigger-10", duration: '100%', offset: 200})
+						.setTween(tween_slide10)
+						.setPin("#slide-10 .block h3")
+						.addTo(controller);
+
+		// slide 3
+		var tween_slide11 = TweenMax.to("#slide-11 .block", 0, {opacity: 1});
+		var scene_slide11 = new ScrollMagic.Scene({triggerElement: "#trigger-11", duration: '100%', offset: 200})
+						.setTween(tween_slide11)
+						.setPin("#slide-11 .block h3")
+						.addTo(controller);
+
+		// slide 3
+		var tween_slide12 = TweenMax.to("#slide-12 .block", 0, {opacity: 1});
+		var scene_slide12 = new ScrollMagic.Scene({triggerElement: "#trigger-12", duration: '100%', offset: 200})
+						.setTween(tween_slide12)
+						.setPin("#slide-12 .block h3")
+						.addTo(controller);
+
+		// slide 3
+		var tween_slide13 = TweenMax.to("#slide-13 .block", 0, {opacity: 1});
+		var scene_slide13 = new ScrollMagic.Scene({triggerElement: "#trigger-13", duration: '100%', offset: 200})
+						.setTween(tween_slide13)
+						.setPin("#slide-13 .block h3")
+						.addTo(controller);
+
+		// init tween, then scene
+		var duration_bar = $('#cpd-scrolling').height() - main_offset;
+		var tween_bar = TweenMax.to("#cpd-progress rect", 1, {width: '100%'});
+		var scene_bar = new ScrollMagic.Scene({triggerElement: "#trigger-top", duration: duration_bar, offset: main_offset})
+						.setTween(tween_bar)
+						.addTo(controller);
+	
+		// // add indicators (requires plugin)
+		scene_bar.addIndicators();	
+		scene_introimg.addIndicators();	
+		scene_introtext.addIndicators();	
+		scene_slide2.addIndicators();		
+		scene_slide3.addIndicators();		
+		scene_slide3img.addIndicators();		
+		scene_slide5.addIndicators();		
+		scene_slide6.addIndicators();	
+	}
+
+	$(document).ready(function(){	
+		loadText();
+
+	});
+</script>
+
+
+{% endblock library_scripts %}
+
+
+
+
+
+
+
+
+
+
+
+
 
