--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div id="cpd-title">Settling for too much</div>
 		</div>
 	</div>
-	<div id="cpd-progress"><svg height="16px"><rect></rect></svg></div>
+	<div id="cpd-progress"><svg height="24px"><rect></rect></svg></div>
 
 
 	<section id="slide-intro" class="slide">
@@ -52,127 +52,166 @@
 		<div class="block">
 			<h3>Between 2012 and 2015, the City of Chicago paid $212,412,939 in settlements in police misconduct cases.</h3>
 		</div>
+		<div class="spacer vh1"></div>
 	</section>
 
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1 half"></div>
 
 	<section id="slide-2" class="slide">
-		<div class="img"></div>
+		<div class="spacer vh1"></div>
 		<div id="trigger-2"></div>
-		<div class="spacer s2"></div>
 		<div class="block">
 			<h3>That was for 677 lawsuits.</h3>
 		</div>
 	</section>
 	
-	<div class="spacer s7"></div>
+	<div class="spacer vh1"></div>
+	<div id="trigger-bg1"></div>
+	<div class="spacer vh1 half"></div>
+	<div id="trigger-bg2"></div>
+	<div class="spacer vh1 half"></div>
+	<div id="trigger-bg3"></div>
+
+	<div id="bg-3" class="bgimg"></div>
+	<div id="bg-2" class="bgimg"></div>
+	<div id="bg-1" class="bgimg"></div>
+	
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
 	
 	<section id="slide-3" class="slide">
-		<div class="spacer s7"></div>
 		<div id="trigger-3"></div>
 		<div class="block">
 			<h3>On average, a lawsuit against the Chicago Police Department is settled about every other day.</h3>
 		</div>
-		<div class="spacer s7"></div>
 	</section>
+
+	<div class="spacer vh1 half"></div>
 	
-	
-	<div class="spacer s7"></div>
+	<div id="trigger-bg4"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div id="trigger-bg5"></div>
+
+	<!-- <div id="bg-5" class="bgimg"></div> -->
+	<div id="bg-4" class="bgimg"></div>	
 	
 	<section id="slide-4" class="slide">
-		<div class="spacer s7"></div>
 		<div id="trigger-4"></div>
 		<div class="block">
 			<h3>The multi-million dollar settlements grab the headlines.</h3>
 		</div>
-		<div class="spacer s7"></div>
 	</section>
-	
-	
-	<div class="spacer s7"></div>
+
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1 half"></div>
 	
 	<section id="slide-5" class="slide">
-		<div class="spacer s7"></div>
 		<div id="trigger-5"></div>
 		<div class="block">
 			<h3>But the median settlement amount is $37,198.</h3>
 		</div>
-		<div class="spacer s7"></div>
 	</section>
+
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1 half"></div>
 	
-	
-
-
-
-
-	<div class="spacer s7"></div>
-	
-	<section id="slide-8" class="slide">
-		<div class="spacer s7"></div>
-		<div id="trigger-8"></div>
+	<section id="slide-6" class="slide">
+		<div id="trigger-6"></div>
 		<div class="block">
 			<h3>The settlements often stem from daily instances of excessive policing in black and Latino communities.</h3>
 		</div>
-		<div class="spacer s7"></div>
 	</section>
+
+
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
 	
+	<div id="trigger-bg6"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div id="trigger-bg7"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div id="trigger-bg8"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div id="trigger-bg9"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div id="trigger-bg10"></div>
+
+	<div id="bg-10" class="bgimg"></div>
+	<div id="bg-9" class="bgimg"></div>
+	<div id="bg-8" class="bgimg"></div>
+	<div id="bg-7" class="bgimg"></div>
+	<div id="bg-6" class="bgimg"></div>
 	
-	<div class="spacer s7"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
 	
-	<section id="slide-9" class="slide">
-		<div class="spacer s7"></div>
-		<div id="trigger-9"></div>
+	<section id="slide-7" class="slide">
+		<div id="trigger-7"></div>
 		<div class="block">
 			<h3>False arrest. Illegal search and seizure. Excessive force.</h3>
 		</div>
-		<div class="spacer s7"></div>
 	</section>
 	
 	
-	<div class="spacer s7"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+
+	<div id="trigger-bg11"></div>
+
+	<div id="bg-11-overlay"></div>
+	<div id="bg-11" class="bgimg"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1 half"></div>
 	
-	<section id="slide-10" class="slide">
-		<div class="spacer s7"></div>
-		<div id="trigger-10"></div>
+	<section id="slide-8" class="slide">
+		<div id="trigger-8"></div>
 		<div class="block">
 			<h3>86 percent of the cases end in a settlement. The city may pay, but a settlement is not an admission of guilt.</h3>
 		</div>
-		<div class="spacer s7"></div>
 	</section>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
 	
 	
-	<div class="spacer s7"></div>
 	
-	<section id="slide-11" class="slide">
-		<div class="spacer s7"></div>
-		<div id="trigger-11"></div>
+	<section id="slide-9" class="slide">
+		<div id="trigger-9"></div>
 		<div class="block">
 			<h3>In 2014, the City of Chicago paid $55 million in settlements, enough money to support the combined annual expenses of a citywide afterschool program and two nonprofits that serve homeless people.</h3>
 		</div>
-		<div class="spacer s7"></div>
 	</section>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+
 	
-	
-	<div class="spacer s7"></div>
-	
-	<section id="slide-12" class="slide">
-		<div class="spacer s7"></div>
-		<div id="trigger-12"></div>
+	<section id="slide-10" class="slide">
+		<div id="trigger-10"></div>
 		<div class="block">
 			<h3>Between 2012 and 2015, the Police Department exceeded its budget for lawsuits by XXX dollars. To pay settlements, the department used money from the city’s general fund and bonds, which added to Chicago’s significant municipal debt. </h3>
 		</div>
-		<div class="spacer s7"></div>
 	</section>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+
 	
-	
-	<div class="spacer s7"></div>
-	
-	<section id="slide-13" class="slide">
-		<div class="spacer s7"></div>
-		<div id="trigger-13"></div>
+	<section id="slide-11" class="slide">
+		<div id="trigger-11"></div>
 		<div class="block">
 			<h3>“Merely approaching police settlements as a financial issue would provide a pretty solid read into problematic patterns in conduct and behavior.” – Joseph Ferguson, Chicago’s inspector general </h3>
 		</div>
-		<div class="spacer s7"></div>
 	</section>
 
 
