--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div id="trigger-1"></div>	
 		<div class="spacer s1"></div>				
 		<div class="block">
-			<h3>Between 2012 and 2015, the City of Chicago paid $212,412,939 in settlements in police misconduct cases.</h3>
+			<h3>Between 2012 and 2015, the City of Chicago paid $212,412,939 in settlements in police misconduct cases. <a target="_blank" href="http://ctt.ec/6w421"><img src="http://clicktotweet.com/img/tweet-graphic-trans.png" alt="Tweet: Chicago police misconduct cases resulted in $212,412,939 in settlements from 2012-2015. The @ChicagoReporter report: http://bit.ly/1PDhCYo" /></a></h3> 
 		</div>
 		<div class="spacer vh1"></div>
 	</section>
