--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
 			<h3>“Merely approaching police settlements as a financial issue would provide a pretty solid read into problematic patterns in conduct and behavior.” – Joseph Ferguson, Chicago’s inspector general </h3>
 		</div>
 	</section>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
 
 
 	
