--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
 		<div id="trigger-1"></div>	
 		<div class="spacer s1"></div>				
 		<div class="block">
-			<h3>Between 2012 and 2015, the City of Chicago paid $212,412,939 in settlements in police misconduct cases. <a target="_blank" href="http://ctt.ec/6w421"><img src="http://clicktotweet.com/img/tweet-graphic-trans.png" alt="Tweet: Chicago police misconduct cases resulted in $212,412,939 in settlements from 2012-2015. The @ChicagoReporter report: http://bit.ly/1PDhCYo" /></a></h3> 
+			<h3>Between 2012 and 2015, the City of Chicago paid $212,412,939 in settlements in police misconduct cases. 
+				<span class="social-icons">
+					<a target="_blank" href="https://twitter.com/home?status=Chicago%20police%20misconduct%20cases%20resulted%20in%20$212,412,939%20in%20settlements%20from%202012-2015.%20The%20%40ChicagoReporter%20report%3A%20http%3A//bit.ly/1PDhCYo" onclick="window.open('https://twitter.com/home?status=Chicago%20police%20misconduct%20cases%20resulted%20in%20$212,412,939%20in%20settlements%20from%202012-2015.%20The%20%40ChicagoReporter%20report%3A%20http%3A//bit.ly/1PDhCYo', 'newwindow', 'width=600, height=400'); return false;"><span class="share icon-twitter"></span></a>
+					<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//bit.ly/1PDhCYo" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http%3A//bit.ly/1PDhCYo', 'newwindow', 'width=600, height=400'); return false;"><span class="share icon-facebook"></span></a>
+					<a target="_blank" href="mailto:?subject=Chicago%20police%20misconduct%20cases%20resulted%20in%20$212,412,939%20in%20settlements%20from%202012-2015.%20Read%20about%20them.&amp;amp;body=http://cpdsettlements.chicagoreporter.com/"><span class="share icon-mail"></span></a>
+				</span>
+			</h3> 
 		</div>
 		<div class="spacer vh1"></div>
 	</section>
