potential fix for CR-45

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<div id="cpd-header">
 		<div id="cpd-headwrap">
 			<div id="cpd-logo">
-				<!-- <a href="http://chicagoreporter.com/"><img src="{{ url_for('cpd_settlements.static', filename='images/cr-icon.jpg') }}" width="60px" alt="Chicago Reporter"/></a> -->
-				<a href="http://chicagoreporter.com/"><img src="{{ url_for('cpd_settlements.static', filename='images/cr-icon.jpg') }}" width="60px" alt="Chicago Reporter"/></a>
+				<a href="http://chicagoreporter.com/"></a>
 			</div>
 			<div id="cpd-title">Settling for too much</div>
 		</div>
