social w/google spreadsheet

--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
 
 <div id="cpd-scrolling" style="position: relative;">
 
-	<div id="cpd-header">
-		<div id="cpd-headwrap">
-			<div id="cpd-logo">
-				<a href="http://chicagoreporter.com/"></a>
-			</div>
-			<div id="cpd-title">Settling for too much</div>
-		</div>
-	</div>
 	<div id="cpd-progress"><svg height="24px"><rect></rect></svg></div>
 
 
@@ -23,7 +15,7 @@
 			<div class="overlay"></div>
 		</div>
 		
-		<div id="trigger-top"></div><div id="trigger-intro"></div>
+		<div class="trigger" id="trigger-top"></div><div class="trigger" id="trigger-intro"></div>
 		<div id="desc">
 			<h1>
 				<span class="settling">Settling </span>
@@ -35,37 +27,28 @@
 		</div>
 	</section>
 	<section id="slide-1" class="slide">
-		<div id="trigger-1"></div>	
+		<div class="trigger" id="trigger-1"></div>	
 		<div class="spacer s1"></div>				
-		<div class="block">
-			<h3>Between 2012 and 2015, the City of Chicago paid $212,412,939 in settlements in police misconduct cases. 
-				<span class="social-icons">
-					<a target="_blank" href="https://twitter.com/home?status=Chicago%20police%20misconduct%20cases%20resulted%20in%20$212,412,939%20in%20settlements%20from%202012-2015.%20The%20%40ChicagoReporter%20report%3A%20http%3A//bit.ly/1PDhCYo" onclick="window.open('https://twitter.com/home?status=Chicago%20police%20misconduct%20cases%20resulted%20in%20$212,412,939%20in%20settlements%20from%202012-2015.%20The%20%40ChicagoReporter%20report%3A%20http%3A//bit.ly/1PDhCYo', 'newwindow', 'width=600, height=400'); return false;"><span class="share icon-twitter"></span></a>
-					<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//bit.ly/1PDhCYo" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http%3A//bit.ly/1PDhCYo', 'newwindow', 'width=600, height=400'); return false;"><span class="share icon-facebook"></span></a>
-					<a target="_blank" href="mailto:?subject=Chicago%20police%20misconduct%20cases%20resulted%20in%20$212,412,939%20in%20settlements%20from%202012-2015.%20Read%20about%20them.&amp;amp;body=http://cpdsettlements.chicagoreporter.com/"><span class="share icon-mail"></span></a>
-				</span>
-			</h3> 
-		</div>
-		<div class="spacer vh1"></div>
+		<div class="block"></div>
+		
 	</section>
 
+	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1 half"></div>
 
 	<section id="slide-2" class="slide">
 		<div class="spacer vh1"></div>
-		<div id="trigger-2"></div>
-		<div class="block">
-			<h3>That was for 677 lawsuits.</h3>
-		</div>
+		<div class="trigger" id="trigger-2"></div>
+		<div class="block"></div>
 	</section>
 	
 	<div class="spacer vh1"></div>
-	<div id="trigger-bg1"></div>
+	<div class="trigger" id="trigger-bg1"></div>
 	<div class="spacer vh1 half"></div>
-	<div id="trigger-bg2"></div>
+	<div class="trigger" id="trigger-bg2"></div>
 	<div class="spacer vh1 half"></div>
-	<div id="trigger-bg3"></div>
+	<div class="trigger" id="trigger-bg3"></div>
 
 	<div id="bg-3" class="bgimg"></div>
 	<div id="bg-2" class="bgimg"></div>
@@ -77,37 +60,31 @@
 	<div class="spacer vh1"></div>
 	
 	<section id="slide-3" class="slide">
-		<div id="trigger-3"></div>
-		<div class="block">
-			<h3>On average, a lawsuit against the Chicago Police Department is settled about every other day.</h3>
-		</div>
+		<div class="trigger" id="trigger-3"></div>
+		<div class="block"></div>
 	</section>
 
 	<div class="spacer vh1 half"></div>
 	
-	<div id="trigger-bg4"></div>
+	<div class="trigger" id="trigger-bg4"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
-	<div id="trigger-bg5"></div>
+	<div class="trigger" id="trigger-bg5"></div>
 
 	<!-- <div id="bg-5" class="bgimg"></div> -->
 	<div id="bg-4" class="bgimg"></div>	
 	
 	<section id="slide-4" class="slide">
-		<div id="trigger-4"></div>
-		<div class="block">
-			<h3>The multi-million dollar settlements grab the headlines.</h3>
-		</div>
+		<div class="trigger" id="trigger-4"></div>
+		<div class="block"></div>
 	</section>
 
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1 half"></div>
 	
 	<section id="slide-5" class="slide">
-		<div id="trigger-5"></div>
-		<div class="block">
-			<h3>But the median settlement amount is $37,198.</h3>
-		</div>
+		<div class="trigger" id="trigger-5"></div>
+		<div class="block"></div>
 	</section>
 
 	<div class="spacer vh1"></div>
@@ -116,29 +93,27 @@
 	<div class="spacer vh1 half"></div>
 	
 	<section id="slide-6" class="slide">
-		<div id="trigger-6"></div>
-		<div class="block">
-			<h3>The settlements often stem from daily instances of excessive policing in black and Latino communities.</h3>
-		</div>
+		<div class="trigger" id="trigger-6"></div>
+		<div class="block"></div>
 	</section>
 
 
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 	
-	<div id="trigger-bg6"></div>
+	<div class="trigger" id="trigger-bg6"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
-	<div id="trigger-bg7"></div>
+	<div class="trigger" id="trigger-bg7"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
-	<div id="trigger-bg8"></div>
+	<div class="trigger" id="trigger-bg8"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
-	<div id="trigger-bg9"></div>
+	<div class="trigger" id="trigger-bg9"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
-	<div id="trigger-bg10"></div>
+	<div class="trigger" id="trigger-bg10"></div>
 
 	<div id="bg-10" class="bgimg"></div>
 	<div id="bg-9" class="bgimg"></div>
@@ -152,17 +127,15 @@
 	<div class="spacer vh1"></div>
 	
 	<section id="slide-7" class="slide">
-		<div id="trigger-7"></div>
-		<div class="block">
-			<h3>False arrest. Illegal search and seizure. Excessive force.</h3>
-		</div>
+		<div class="trigger" id="trigger-7"></div>
+		<div class="block"></div>
 	</section>
 	
 	
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 
-	<div id="trigger-bg11"></div>
+	<div class="trigger" id="trigger-bg11"></div>
 
 	<div id="bg-11-overlay"></div>
 	<div id="bg-11" class="bgimg"></div>
@@ -171,10 +144,8 @@
 	<div class="spacer vh1 half"></div>
 	
 	<section id="slide-8" class="slide">
-		<div id="trigger-8"></div>
-		<div class="block">
-			<h3>86 percent of the cases end in a settlement. The city may pay, but a settlement is not an admission of guilt.</h3>
-		</div>
+		<div class="trigger" id="trigger-8"></div>
+		<div class="block"></div>
 	</section>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
@@ -182,30 +153,24 @@
 	
 	
 	<section id="slide-9" class="slide">
-		<div id="trigger-9"></div>
-		<div class="block">
-			<h3>In 2014, the City of Chicago paid $55 million in settlements, enough money to support the combined annual expenses of a citywide afterschool program and two nonprofits that serve homeless people.</h3>
-		</div>
+		<div class="trigger" id="trigger-9"></div>
+		<div class="block"></div>
 	</section>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 
 	
 	<section id="slide-10" class="slide">
-		<div id="trigger-10"></div>
-		<div class="block">
-			<h3>Between 2012 and 2015, the Police Department exceeded its budget for lawsuits by XXX dollars. To pay settlements, the department used money from the city’s general fund and bonds, which added to Chicago’s significant municipal debt. </h3>
-		</div>
+		<div class="trigger" id="trigger-10"></div>
+		<div class="block"></div>
 	</section>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 
 	
 	<section id="slide-11" class="slide">
-		<div id="trigger-11"></div>
-		<div class="block">
-			<h3>“Merely approaching police settlements as a financial issue would provide a pretty solid read into problematic patterns in conduct and behavior.” – Joseph Ferguson, Chicago’s inspector general </h3>
-		</div>
+		<div class="trigger" id="trigger-11"></div>
+		<div class="block"></div>
 	</section>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
@@ -233,8 +198,8 @@
 <script>
 
 	$(document).ready(function(){	
-		//loadText(); //holding off on spreadsheets integration for now (until scrolling events are figured out)
-		initScroll();
+		loadText(); //holding off on spreadsheets integration for now (until scrolling events are figured out)
+		//initScroll();
 	});
 </script>
 
