--- a/index.html
+++ b/index.html
@@ -175,7 +175,11 @@
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 
+	<div id="bg-12" class="bgimg"></div>
+	
+</div>
 
+<div id="the-app">
 	
 </div>
 
