--- a/_nav.html
+++ b/_nav.html
@@ -3,10 +3,10 @@
     <div id="cpd-logo">
       <a href="http://chicagoreporter.com/"></a>
     </div>
-    <a href="{{ site_path}}{{ url_for('preview') }}" class="cpd-title">Settling for too much</a>
+    <a href="{{ site_path}}" class="cpd-title">Settling for too much</a>
     <div class="cpd-links">
       <ul>
-        <li><a href="{{ site_path }}{{ url_for('cpd_settlements.search') }}">Data</a></li>
+        <li><a href="{{ site_path }}search/">Data</a></li>
         <li><a href="http://chicagoreporter.com/">Stories</a></li>
       </ul>
     </div>
