--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <div id="cpd-scrolling" style="position: relative;">
 
-	<div id="cpd-progress"><svg height="24px"><rect></rect></svg></div>
+	<div id="cpd-progress"><div height="24px"><div class="rect"></div></div></div>
 
 
 	<section id="slide-intro" class="slide">
