scroll instruction, progress bar update, minimal style adjustments

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
 <div id="cpd-scrolling" style="position: relative;">
 
-	<div id="cpd-progress"><div height="24px"><div class="rect"></div></div></div>
+	<!-- <div id="instruction">
+	    <span class="scroll">scroll to continue</span>
+	    <span class="arrow"></span>
+	</div> -->
+	<div id="cpd-progress"><div width="100%"><div class="rect"></div><span class="down"></span><!-- <span class="scroll">scroll to continue</span> --></div></div>
 
 
 	<section id="slide-intro" class="slide">
@@ -24,6 +28,7 @@
 				<span class="much redtext">much</span>
 			</h1>
 			<h2>Police misconduct lawsuits in Chicago</h2>
+			<span class="scroll">scroll to continue</span>
 		</div>
 	</section>
 	<section id="slide-1" class="slide">
