--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	    <span class="scroll">scroll to continue</span>
 	    <span class="arrow"></span>
 	</div> -->
-	<div id="cpd-progress"><div width="100%"><div class="rect"></div><span class="down"></span><!-- <span class="scroll">scroll to continue</span> --></div></div>
+	<div id="cpd-progress"><div width="100%" class="rect-wrap"><div class="rect"></div><span class="down"></span><span class="scroll">scroll to continue</span></div></div>
 
 
 	<section id="slide-intro" class="slide">
