--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 		<div class="trigger" id="trigger-top"></div><div class="trigger" id="trigger-intro"></div>
 		<div id="desc">
 			<h1>
-				<span class="settling">Settling </span>
-				<span class="for">for </span>
-				<span class="too redtext">too </span>
-				<span class="much redtext">much</span>
+				<span class="settling">Settling</span>
+				<span class="for">for</span>
+				<span class="toomuch redtext">too&nbsp;much</span>
 			</h1>
 			<h2>Police misconduct lawsuits in Chicago</h2>
 			<span class="scroll">scroll to continue</span>
