title slide responsive

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<span class="for">for</span>
 				<span class="toomuch redtext">too&nbsp;much</span>
 			</h1>
-			<h2>Police misconduct lawsuits in Chicago</h2>
-			<span class="scroll">scroll to continue</span>
+			<h2>Police misconduct lawsuits in Chicago<span class="scroll">scroll to continue</span></h2>
+			
 		</div>
 	</section>
 	<section id="slide-1" class="slide">
