homepage fixes in progress

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<span class="settling">Settling</span>
 				<span class="for">for</span>
 				<span class="toomuch redtext">too&nbsp;much</span>
+				<span class="subhead">Police misconduct lawsuits in Chicago<span class="scroll">scroll to continue</span></span>
 			</h1>
-			<h2>Police misconduct lawsuits in Chicago<span class="scroll">scroll to continue</span></h2>
 			
 		</div>
 	</section>
