skip intro/replay intro button

--- a/_nav.html
+++ b/_nav.html
@@ -12,3 +12,9 @@
     </div>
   </div>
 </div>
+
+
+<div id="intro-controls">
+  <div id="skip-intro">skip intro</div>
+  <div id="replay-intro">play intro</div>
+</div>
