menu icon/toggle

--- a/_nav.html
+++ b/_nav.html
@@ -4,12 +4,23 @@
       <a href="http://chicagoreporter.com/"></a>
     </div>
     <a href="{{ site_path}}" class="cpd-title">Settling for too much</a>
-    <div class="cpd-links">
-      <ul>
-        <li><a href="{{ site_path }}search/">Data</a></li>
-        <li><a href="http://chicagoreporter.com/">Stories</a></li>
-      </ul>
-    </div>
+
+    <nav id="main-menu">
+      <div class="menu-toggle-wrap">
+        <div class="menu-toggle">
+          <span>Menu</span>
+        </div>
+      </div>
+
+      <div class="cpd-links">
+        <ul>
+          <li><a href="http://chicagoreporter.com/">Credits &amp; Methodology</a></li>
+          <li><a href="{{ site_path }}search/">Data</a></li>
+          <li><a href="http://chicagoreporter.com/">Stories</a></li>
+        </ul>
+      </div>
+    </nav>
+
   </div>
 </div>
 
