--- a/_nav.html
+++ b/_nav.html
@@ -14,9 +14,9 @@
 
       <div class="cpd-links">
         <ul>
-          <li><a href="http://chicagoreporter.com/">Credits &amp; Methodology</a></li>
+          <li><a href="{{ site_path }}about.html">Credits &amp; Methodology</a></li>
           <li><a href="{{ site_path }}search/">Data</a></li>
-          <li><a href="http://chicagoreporter.com/">Stories</a></li>
+          <li><a href="http://chicagoreporter.com">Stories</a></li>
         </ul>
       </div>
     </nav>
